--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,13 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org/'
       
+      - name: Update version from release
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          npm version $VERSION --no-git-tag-version --allow-same-version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install dependencies
         run: npm ci
       
@@ -28,15 +35,12 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Setup Git
+      - name: Commit package.json changes
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-
-      - name: Bump version
-        run: |
-          npm version patch -m "Bump version to %s [skip ci]"
+          git add package.json
+          git commit -m "Update version in package.json [skip ci]"
           git push
-          git push --tags
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
