--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,68 @@
-name: Publish Package to NPM
+name: "Release"
+run-name: "Release from ${{github.ref_name}} by @${{ github.actor }}"
+
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
 
 jobs:
-  build:
+  set-version:
+    runs-on: ubuntu-latest
+    outputs:
+        version: ${{ steps.version.outputs.version }}
+    steps:
+        - name: Checkout
+          uses: actions/checkout@v4.1.1
+
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '18.x'
+
+        - name: Update and get version
+          id: version
+          run: |
+            npm version patch --no-git-tag-version
+            VERSION=$(node -p "require('./package.json').version")
+            echo "version=$VERSION" | tee -a $GITHUB_OUTPUT
+
+        - name: Commit updated package.json
+          run: |
+            git config --local user.email "github-actions[bot]@users.noreply.github.com"
+            git config --local user.name "github-actions[bot]"
+            git add package.json
+            git commit -m "Release version ${{ steps.version.outputs.version }} [skip ci]"
+            git push
+
+  create-git-tag:
+    needs:
+      - set-version
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: Create git tag
+        run: |
+          set -x
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git tag ${{needs.set-version.outputs.version}}
+          git push --no-verify origin ${{needs.set-version.outputs.version}}
+
+  publish-npm-package:
+    needs:
+      - set-version
+      - create-git-tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org/'
-      
-      - name: Update version from release
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          npm version $VERSION --no-git-tag-version --allow-same-version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install dependencies
         run: npm ci
@@ -35,12 +75,23 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Commit package.json changes
-        run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
-          git add package.json
-          git commit -m "Update version in package.json [skip ci]"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  create-github-release:
+    needs:
+      - set-version
+      - create-git-tag
+      - publish-npm-package
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Release Changelog
+        id: release_changelog
+        uses: jaywcjlove/changelog-generator@v1.9.6
+        with:
+            token: ${{ secrets.GITHUB_TOKEN }}
+            show-emoji: "false"
+
+      - name: Create GitHub release
+        uses: mikepenz/action-gh-release@v0.4.1
+        with:
+            tag_name: ${{needs.set-version.outputs.version}}
+            body: ${{steps.release_changelog.outputs.changelog}}
+            generate_release_notes: true
