--- a/package.json
+++ b/package.json
@@ -21,14 +21,19 @@
   },
   "devDependencies": {
     "@docusaurus/types": ">=2.0.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "typescript": "^5.0.0",
     "jest": "^29.0.0",
-    "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "ts-jest": "^29.0.0",
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=16.14"
+  },
+  "dependencies": {
+    "fs-extra": "^11.2.0",
+    "gray-matter": "^4.0.3"
   }
 }
